--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>🌟colors🌟</title>
+    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/209/raccoon_1f99d.png" type="image/icon type">
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js" defer></script>
     <title>Colors</title>
